Fixed the spacing of conf images in mobile view

--- a/components/ConfDetailsSlider/ConfDetailsSlider.scss
+++ b/components/ConfDetailsSlider/ConfDetailsSlider.scss
@@ -1,8 +1,16 @@
 .PastConf--carousel {
   width: 30rem;
+  @include respondAt(915px) {
+    width: 20rem;
+    margin: 0 auto 2rem auto;
+  }
   @include respondAt(767px) {
-    width: 15rem;
-    margin-bottom: 2rem;
+    width: 18rem;
+    margin: 0 auto 2rem auto;
+  }
+  @include respondAt(480px) {
+    width: 16rem;
+    margin: 0 auto 2rem auto;
   }
   img {
     width: 100%;
